voteapp/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: example-voting-app
  namespace: azurevoteapp
  labels:
    app: example-voting-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-voting-app
  template:
    metadata:
      labels:
        app: example-voting-app
    spec:
      containers:
        - name: example-voting-app
          image: image-registry.openshift-image-registry.svc:5000/azurevoteapp/example-voting-app-git
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
